# learn-vrc-tst

./: README.md  c2h6+n2.xyz  ch3+ch3.xyz  ethane.xyz  ethane_v0.xyz  ethyl_bent.xyz  ethyl_bent2.xyz  ethyl_opt.xyz  ethyl_radical.xyz  ethyl_radical_v0.xyz  fig.ipynb  hform.ipynb  lefthook.yaml  methane.xyz  methane_v0.xyz  oh+oh.xyz  oh+oh_v0.xyz  onedmin.ipynb  pixi.toml  pyproject.toml  render.json  render.sh  symm.ipynb  symm_v0.xyz  symm_v1.xyz  symm_v2.xyz  symm_v3.xyz  tbump.toml  vrctst.ipynb
.github/workflows/: test.yml
cyclopentene+oh/: draw.sh  orient.ipynb  v
energy-sensitivity/: calc.ipynb
hindered-rotor/: effective-mass.ipynb  fourier_fit_ref.txt  geom.xyz  potential.ipynb  solve.ipynb
learn-energy-transfer/: alpha.ipynb  units.ipynb  z.ipynb
phase-space-theory/: coefficient.ipynb
scripts/: init.sh
src/learn_vrc_tst/: __init__.py  coord.py  geom.py  rot.py  view.py
symmetry-number-figure/: ammonia-in.xyz  ammonia.ipynb  ammonia.xyz  fig.ipynb  helium-atoms-in copy.xyz  helium-atoms-in.xyz  helium-atoms.ipynb  helium-atoms.xyz  hydrogen-atoms-in.xyz  hydrogen-atoms.ipynb  hydrogen-atoms.xyz  methane-oriented.xyz  methane-with-dummies.xyz  methane.xyz  methylamine-in.xyz  methylamine-in1.xyz  methylamine-in2.xyz  methylamine-prepare.ipynb  methylamine.ipynb
tests/: test_learn_vrc_tst.py
thermo/: enthalpy_increments.csv  enthalpy_thermal_contribution_298K_CODATA_peratom_kcal.csv  hform_0K.ipynb  hform_298K.ipynb
