[project]
name = "learn-vrc-tst"
version = "0.0.0"
authors = [{name = "Andreas V. Copan", email = "avcopan@uga.edu"}]
requires-python = ">= 3.12"
dependencies = []

[build-system]
build-backend = "uv_build"
requires = ["uv_build"]

# Ruff configurations
[tool.ruff]
exclude = [
    "docs",
    "**/*.ipynb",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing trailing comma (handled by format)
    "RUF022",   # `__all__` is not sorted
    "TID252",   # relative import
    "D203",     # confict: incorrect blank line before class (uses D211 instead)
    "D213",     # conflict: multi-line summary second line (uses D212 instead)
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# Ty configurations
[tool.ty.environment]
python = ".pixi/envs/dev/bin/python"

[tool.ty.src]
include = [
    "src",
    "tests",
]

# Import-linter configurations
[tool.importlinter]
root_package = "learn_vrc_tst"

[[tool.importlinter.contracts]]
name = "Module Layering"
type = "layers"
layers = [
    "learn_vrc_tst.view",
    "learn_vrc_tst.geom",
]
